[package]
name = "mdo-future"
version = "0.2.0"
authors = ["Daniil Smirnov <danslapman@gmail.com>"]
homepage = "https://github.com/danslapman/rust-mdo-future"
repository = "https://github.com/danslapman/rust-mdo-future"
description = "Zero-cost futures support for rust-mdo"
keywords = ["monad", "do", "future"]
license = "WTFPL"

[dependencies]
futures = "0.1.*"

[dev-dependencies]
mdo = "0.3"
futures-cpupool = "0.1.*"